<resources>
    <string name="app_name">锤锤</string>
    <!--主页面-->
    <string name="main_01">消息</string>
    <string name="main_02">联系人</string>
    <string name="main_03">工作</string>
    <string name="main_04">应用</string>
    <string name="main_05">我的</string>
    <!--登录注册-->
    <string name="login_01">手机号：</string>
    <string name="login_02">密&#160;&#160;&#160;码：</string>
    <string name="login_03">免费注册</string>
    <string name="login_04">忘记密码</string>
    <string name="login_05">登   录</string>
    <string name="login_06">请输入手机号</string>
    <string name="login_07">请输入密码</string>
    <string name="login_08">旧密码：</string>
    <string name="login_09">新密码：</string>
    <!--注册-->
    <string name="register_01">手机号：</string>
   <string name="register_02">姓&#160;&#160;&#160;名：</string>
    <string name="register_03">密&#160;&#160;&#160;码：</string>
    <string name="register_04">确&#160;&#160;&#160;认：</string>
    <string name="register_05">注册</string>
    <string name="register_06">修改</string>
    <string name="register_07">下一步</string>
    <string name="register_08">公司名称：</string>
    <string name="register_09">邀请码：</string>
    <string name="register_10">公司地区：</string>
    <string name="register_11">人员规模：</string>
    <string name="register_12">管理账号：</string>
    <string name="register_13">管理密码：</string>
    <string name="register_14">添加部门</string>
    <string name="register_15">部门</string>
    <string name="register_16">部门名称</string>
    <string name="register_17">注册</string>
    <string name="register_18">请输入公司名称</string>
    <string name="register_19">请选择公司地址</string>
    <string name="register_20">请选择公司规模</string>
    <string name="register_21">请输入管理员账号</string>
    <string name="register_22">请输入管理员密码</string>
    <string name="register_23">请输入邀请码</string>
    <string name="register_24">详细地址：</string>
    <string name="register_25">请输入公司的详细地址</string>
    <string name="register_28">上班时间：</string>
    <string name="register_27">下班时间：</string>
    <string name="register_29">管理员</string>
    <string name="register_30">普通用户</string>
    <!--预约开会-->
    <string name="meet_01">会议主题：</string>
    <string name="meet_02">开始时间：</string>
    <string name="meet_03">预估时间：</string>
    <string name="meet_06">预估时间(分钟)：</string>
    <string name="meet_04">确 定</string>
    <string name="meet_05">参会人员</string>


    <!--我的-->
    <string name="my_01">我的考勤</string>
    <string name="my_02">基础信息</string>
    <string name="my_03">设置</string>
    <string name="my_04">帮助中心</string>
    <string name="my_05">关于我们</string>
    <string name="my_06">修改密码</string>
    <string name="my_07">意见反馈</string>
    <string name="my_08">版本更新</string>
    <string name="my_09">清除缓存</string>
    <string name="my_10">退 出 登 录</string>
    <string name="my_11">昵称</string>
    <string name="my_12">部门</string>
    <string name="my_13">职务</string>
    <string name="my_14">电话</string>
    <string name="my_15">性别</string>
    <string name="my_16">地区</string>
    <string name="my_17">提交</string>
    <string name="my_18">考勤月度汇总</string>
    <string name="my_19">出勤天数</string>
    <string name="my_21">休息天数</string>
    <string name="my_22">迟到</string>
    <string name="my_23">早退</string>
    <string name="my_24">缺卡</string>
    <string name="my_25">旷工</string>
    <string name="my_26">学历</string>
    <string name="my_27">职称</string>
    <string name="my_28">技能</string>
    <string name="my_29">特长</string>
    <string name="my_30">职位级别</string>
    <string name="my_31">工龄</string>
    <string name="my_32">管理员登录</string>
    <string name="my_33">登录</string>
    <string name="my_34">用户名</string>
    <string name="my_35">密码</string>
    <string name="my_36">请输入用户名</string>
    <string name="my_37">请输入密码</string>
    <string name="my_38">公司基础信息</string>
    <string name="my_39">部门信息</string>
    <string name="my_40">新的部门名称</string>
    <string name="my_41">设置打分人员</string>
    <string name="my_42">锤锤是由山西赛文思达科技有限公司打造的</string>
    <string name="my_43">智能办公软件</string>
    <string name="mine_feed_back">请把你的宝贵意见和建议写在此处...</string>
    <string name="my_44">点错了，我不是管理员</string>
    <!--应用-->
    <string name="apply_01">考勤打卡</string>
    <string name="apply_02">源动力</string>
    <string name="apply_03">日志</string>
    <string name="apply_04">公告</string>
    <string name="apply_05">审批</string>
    <string name="apply_06">会议预约</string>
    <string name="apply_07">文件管理</string>
    <string name="apply_08">当前位置：</string>
    <string name="apply_09">上班打卡</string>
    <string name="apply_10">下班打卡</string>
    <string name="apply_11">智能办公</string>
    <string name="apply_12">打 分</string>
    <string name="apply_13">查看分数</string>
    <string name="apply_14">提 升 基 础 分</string>
    <!--日志-->
    <string name="rz_01">写日志</string>
    <string name="rz_02">看日志</string>
    <string name="rz_03">日报</string>
    <string name="rz_04">周报</string>
    <string name="rz_05">月报</string>
    <string name="rz_06">今日完成工作</string>
    <string name="rz_07">未完成工作&#160;</string>
    <string name="rz_08">需协调工作&#160;</string>
    <string name="rz_09">图片</string>
    <string name="rz_10">发给谁（点击头像删除）</string>
    <string name="rz_11">请填写文字</string>
    <string name="rz_12">备注</string>
    <string name="rz_13">图片</string>
    <string name="rz_14">提 交</string>
    <string name="rz_15">发给谁</string>
    <string name="rz_16">（点击头像删除）</string>
    <string name="rz_17">本周完成工作</string>
    <string name="rz_18">本周工作总结</string>
    <string name="rz_19">下周工作计划</string>
    <string name="rz_20">需协调与帮助</string>
    <string name="rz_21">本月工作内容</string>
 　 <string name="rz_22">本月工作总结</string>
    <string name="rz_23">下月工作计划</string>
    <string name="rz_24">我收到的</string>
    <string name="rz_25">我发出的</string>
    <string name="rz_26">高级筛选</string>
    <string name="rz_27">选择发送人</string>
    <string name="rz_28">开始时间</string>
    <string name="rz_29">结束时间</string>
    <string name="rz_30">按模板筛选</string>
    <string name="rz_31">重置</string>
    <string name="rz_32">确定</string>

    <!--审批-->
    <string name="sp_01">我发起的</string>
    <string name="sp_02">我审批的</string>
    <string name="sp_03">请假</string>
    <string name="sp_04">出差</string>
    <string name="sp_05">外出</string>
    <string name="sp_06">加班</string>
    <string name="sp_07">报销</string>
    <string name="sp_08">开始时间</string>
    <string name="sp_09">结束时间</string>
    <string name="sp_10">请假天数</string>
    <string name="sp_11">请假事由</string>
    <string name="sp_12">审批人</string>
    <string name="sp_13">请输入请假天数</string>
    <string name="sp_14">请输入请假原因</string>
    <string name="sp_15">请选择</string>
    <string name="sp_16">提  交</string>
    <string name="sp_17">出差地点</string>
    <string name="sp_22">请输入出差地点</string>
    <string name="sp_18">出差天数</string>
    <string name="sp_19">请输入出差天数</string>
    <string name="sp_20">出差事由</string>
    <string name="sp_21">请输入出差原因</string>
    <string name="sp_23">外出时间(小时)</string>
    <string name="sp_24">外出事由</string>
    <string name="sp_25">请输入外出原因</string>
    <string name="sp_26">加班时长(小时)</string>
    <string name="sp_27">请输入加班时长</string>
    <string name="sp_28">加班原因</string>
    <string name="sp_29">请输入加班原因</string>
    <string name="sp_30">是否为法定节假日</string>
    <string name="sp_31">加班核算方式</string>
    <string name="sp_32">报销明细</string>
    <string name="sp_33">报销金额(元)</string>
    <string name="sp_34">请输入数字</string>
    <string name="sp_35">报销类别</string>
    <string name="sp_36">如：采购经费、活动经费</string>
    <string name="sp_37">费用明细</string>
    <string name="sp_38">请输入费用明细描述</string>
    <string name="sp_39">删除</string>
    <string name="sp_40">增加报销明细</string>
    <string name="sp_41">状态</string>
    <string name="sp_42">全部</string>
    <string name="sp_43">审批完成</string>
    <string name="sp_44">审批中</string>
    <string name="sp_45">请假</string>
    <string name="sp_46">报销</string>
    <string name="sp_47">出差</string>
    <string name="sp_48">加班</string>
    <string name="sp_49">外出</string>
    <string name="sp_50">类型</string>
    <string name="sp_51">审批编号</string>
    <string name="sp_52">所在部门</string>
    <string name="sp_53">请假类型</string>
    <string name="sp_54">开始时间</string>
    <string name="sp_55">结束时间</string>
    <string name="sp_56">请假天数</string>
    <string name="sp_57">请假事由</string>
    <string name="sp_58">出差地点</string>
    <string name="sp_59">开始时间</string>
    <string name="sp_60">结束时间</string>
    <string name="sp_61">出差天数</string>
    <string name="sp_62">出差事由</string>
    <string name="sp_63">外出时间(小时)</string>
    <string name="sp_64">外出事由</string>
    <string name="sp_65">加班时长(小时)</string>
    <string name="sp_66">加班原因</string>
    <string name="sp_67">是否为法定节假日</string>
    <string name="sp_68">加班核算方式</string>
    <string name="sp_69">总报销金额(元)：</string>
    <string name="sp_70">请输入外出时间</string>
    <string name="sp_71">图片</string>
    <string name="sp_72">同意</string>
    <string name="sp_73">拒绝</string>
    <!--预约开会-->
    <string name="yykh_01">预约开会</string>
    <!--文件管理-->
    <string name="file_01">文件标题:</string>
    <string name="file_02">文件内容</string>
    <string name="file_03">发给谁</string>
    <string name="file_04">添加附件</string>
    <string name="file_05">发布</string>
    <string name="file_06">附件内容</string>
    <string name="file_07">发布时间:</string>
    <!--公告-->
    <string name="gonggao_01">填写公告标题</string>
    <string name="gonggao_02">填写公告内容</string>
    <string name="gonggao_03">接收人</string>
    <string name="gonggao_04">全体员工</string>
    <string name="gonggao_05">确  定</string>
    <!--建群-->
    <string name="confirm">确认</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="all_group_member">全部群成员</string>
    <string name="search_message">查找聊天记录</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群名称</string>
    <string name="group_announcement">群公告</string>
    <string name="group_code">群二维码</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="cancel">取消</string>
    <string name="new_group_name">新的群名称</string>
    <!--源动力-->
    <string name="ydl_01">请选择</string>
    <string name="ydl_02">去评分</string>
    <!--图片浏览-->
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="no_read_message">"···"</string>
</resources>
