<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col2"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/start_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sp_08"
            android:textColor="@color/text_color"
            />
        <TextView
            android:id="@+id/start_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:text="@string/sp_15"
            android:drawableRight="@mipmap/icon_right_arr"
            android:drawablePadding="@dimen/height_5"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/col2"
        android:layout_marginLeft="@dimen/height_10"
        />
    <LinearLayout
        android:id="@+id/end_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sp_09"
            android:textColor="@color/text_color"
            />
        <TextView
            android:id="@+id/end_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:text="@string/sp_15"
            android:drawableRight="@mipmap/icon_right_arr"
            android:drawablePadding="@dimen/height_5"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sp_23"
            android:textColor="@color/text_color"
            />
        <EditText
            android:id="@+id/nums_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:hint="@string/sp_70"
            android:textSize="@dimen/size_14"
            android:background="@null"
            android:inputType="numberDecimal"
            android:layout_marginLeft="@dimen/height_10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sp_24"
            android:textColor="@color/text_color"
            />
        <EditText
            android:id="@+id/reason_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:hint="@string/sp_25"
            android:textSize="@dimen/size_12"
            android:background="@null"
            android:layout_marginLeft="@dimen/height_10"
            android:minLines="2"

            android:gravity="left|top"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sp_12"
                android:textColor="@color/text_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rz_16"
                />
        </LinearLayout>

        <com.hhl.library.FlowTagLayout
            android:id="@+id/flow_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_10"

            />


    </LinearLayout>
    <Button
        android:id="@+id/sub_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:text="@string/sp_16"
        android:background="@drawable/btn_bg2"
        android:textColor="@color/white"
        android:layout_margin="@dimen/height_40"
        />
</LinearLayout>