<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"></include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_160"
        android:src="@mipmap/apply_img"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_50"
        android:text="@string/apply_11"
        android:gravity="center_vertical"
        android:textColor="@color/text_color"
        android:paddingLeft="@dimen/height_10"
        android:paddingRight="@dimen/height_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/line_color2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_20"
        >
        <TextView
            android:id="@+id/kqdk_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_kqdk"
            android:text="@string/apply_01"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
        />
        <TextView
            android:id="@+id/ydl_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_ydl"
            android:text="@string/apply_02"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/rizhi_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_rz"
            android:text="@string/apply_03"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/gonggao_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_gonggao"
            android:text="@string/apply_04"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_20"
        >
        <TextView
            android:id="@+id/shenpi_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_shenpi"
            android:text="@string/apply_05"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/hyyy_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/apply_hyyy"
            android:text="@string/apply_06"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/file_manager_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/icon_file_manager"
            android:text="@string/apply_07"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_12"
            android:drawablePadding="@dimen/height_5"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"></LinearLayout>
    </LinearLayout>

</LinearLayout>