<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_32"
            android:paddingLeft="@dimen/height_15"
            android:paddingTop="@dimen/height_10"
            android:paddingBottom="@dimen/height_5"
            android:textSize="@dimen/size_12"
            />
        <TextView
            android:id="@+id/del_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="删除"
            android:layout_marginRight="@dimen/height_10"
            android:textColor="@color/blue"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sp_33"
            android:textColor="@color/text_color"
            />
        <EditText
            android:id="@+id/money_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:hint="@string/sp_34"
            android:textSize="@dimen/size_14"
            android:background="@null"
            android:inputType="numberDecimal"
            android:layout_marginLeft="@dimen/height_10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/col2"
        android:layout_marginLeft="@dimen/height_15"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sp_35"
            android:textColor="@color/text_color"
            />
        <EditText
            android:id="@+id/type_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:hint="@string/sp_36"
            android:textSize="@dimen/size_14"
            android:background="@null"
            android:layout_marginLeft="@dimen/height_10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/height_15"
        android:layout_marginTop="@dimen/height_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sp_37"
            android:textColor="@color/text_color"
            />
        <EditText
            android:id="@+id/details_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/line_color2"
            android:hint="@string/sp_38"
            android:textSize="@dimen/size_12"
            android:background="@null"
            android:layout_marginLeft="@dimen/height_10"
            android:minLines="2"
            android:gravity="left|top"
            />
    </LinearLayout>
</LinearLayout>