<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col2"
    >
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/height_20"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/fq_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp_01"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_06"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/sp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp_02"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_07"
            android:drawablePadding="@dimen/height_5"
            android:layout_marginLeft="@dimen/height_30"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/height_20"
        android:background="@color/white"
        android:layout_marginTop="@dimen/height_10"
        >
        <TextView
            android:id="@+id/qj_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_03"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_01"
            android:gravity="center_horizontal"
            android:drawablePadding="@dimen/height_5"
            />

        <TextView
            android:id="@+id/cc_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_04"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_02"
            android:gravity="center_horizontal"
            android:drawablePadding="@dimen/height_5"
          />

        <TextView
            android:id="@+id/wc_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_05"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_03"
            android:gravity="center_horizontal"
            android:drawablePadding="@dimen/height_5"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/height_15"
        android:paddingBottom="@dimen/height_15"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/jb_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_06"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_04"
            android:gravity="center_horizontal"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:id="@+id/bx_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sp_07"
            android:textColor="@color/text_color"
            android:drawableTop="@mipmap/icon_sp_05"
            android:gravity="center_horizontal"
            android:drawablePadding="@dimen/height_5"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>